--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@next/env": "^15.1.0",
-    "next": "^15.1.0",
+    "next": "^15.1.1",
     "openai": "^4.76.1",
     "papaparse": "^5.4.1",
+    "puppeteer": "^23.10.4",
+    "puppeteer-extra": "^3.3.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
