--- a/package.json
+++ b/package.json
@@ -10,14 +10,24 @@
   },
   "dependencies": {
     "@next/env": "^15.1.0",
-    "next": "^15.1.1",
+    "@radix-ui/react-label": "^2.1.1",
+    "@radix-ui/react-select": "^2.1.4",
+    "@radix-ui/react-slot": "^1.1.1",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.469.0",
+    "next": "^15.1.2",
+    "next-themes": "^0.4.4",
     "openai": "^4.76.1",
     "papaparse": "^5.4.1",
     "puppeteer": "^23.10.4",
     "puppeteer-extra": "^3.3.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "resend": "^4.0.1"
+    "react-icons": "^5.4.0",
+    "resend": "^4.0.1",
+    "tailwind-merge": "^2.5.5",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
