--- a/package.json
+++ b/package.json
@@ -10,15 +10,17 @@
   },
   "dependencies": {
     "@next/env": "^15.1.0",
+    "@radix-ui/react-dropdown-menu": "^2.1.4",
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-toast": "^1.2.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.469.0",
     "next": "^15.1.2",
     "next-themes": "^0.4.4",
-    "openai": "^4.76.1",
+    "openai": "^4.77.0",
     "papaparse": "^5.4.1",
     "puppeteer": "^23.10.4",
     "puppeteer-extra": "^3.3.6",
