--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "puppeteer-extra": "^3.3.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.1",
     "react-icons": "^5.4.0",
     "resend": "^4.0.1",
     "tailwind-merge": "^2.5.5",
